update api docs

--- a/wilson/parameters.m.html
+++ b/wilson/parameters.m.html
@@ -860,8 +860,13 @@ table {
   </style>
 
   <style type="text/css">
-  .codehilite .hll { background-color: #ffffcc }
-.codehilite  { background: #f8f8f8; }
+  pre { line-height: 125%; margin: 0; }
+td.linenos pre { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+span.linenos { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+td.linenos pre.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+.codehilite .hll { background-color: #ffffcc }
+.codehilite { background: #f8f8f8; }
 .codehilite .c { color: #408080; font-style: italic } /* Comment */
 .codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
@@ -1082,13 +1087,14 @@ table {
 
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_W&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">80.385</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_Z&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">91.1876</span>
+<span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_h&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">125.</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;GF&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">1.1663787e-5</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;alpha_e&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mf">127.9</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;alpha_s&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">0.1185</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;Vus&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">0.2243</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;Vub&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">3.62e-3</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;Vcb&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">4.221e-2</span>
-<span class="n">p</span><span class="p">[</span><span class="s1">&#39;gamma&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">1.27</span>
+<span class="n">p</span><span class="p">[</span><span class="s1">&#39;delta&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">1.27</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_b&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">4.18</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_s&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">0.095</span>
 <span class="n">p</span><span class="p">[</span><span class="s1">&#39;m_c&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mf">1.28</span>
