--- a/wilson/index.html
+++ b/wilson/index.html
@@ -861,8 +861,13 @@ table {
   </style>
 
   <style type="text/css">
-  .codehilite .hll { background-color: #ffffcc }
-.codehilite  { background: #f8f8f8; }
+  pre { line-height: 125%; margin: 0; }
+td.linenos pre { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+span.linenos { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+td.linenos pre.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+.codehilite .hll { background-color: #ffffcc }
+.codehilite { background: #f8f8f8; }
 .codehilite .c { color: #408080; font-style: italic } /* Comment */
 .codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
@@ -1063,6 +1068,7 @@ table {
         <li class="mono"><a href="test_wilson.m.html">wilson.test_wilson</a></li>
         <li class="mono"><a href="translate/index.html">wilson.translate</a></li>
         <li class="mono"><a href="util/index.html">wilson.util</a></li>
+        <li class="mono"><a href="wcxf/index.html">wilson.wcxf</a></li>
       </ul>
     </li>
     </ul>
@@ -1112,6 +1118,7 @@ weak effective theory (WET) below the W mass.</p>
 <span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">translate</span>
 <span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">parameters</span>
 <span class="kn">from</span> <span class="nn">.classes</span> <span class="kn">import</span> <span class="n">Wilson</span>
+<span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">wcxf</span>
 </pre></div>
 
   </div>
@@ -1175,6 +1182,12 @@ can be used with the <code>wcxf</code> Python package.</p></div>
       
   
     <div class="desc"><p>Utility modules for wilson.</p></div>
+
+      </div>
+      <div class="item">
+      <p class="name"><a href="wcxf/index.html">wilson.wcxf</a></p>
+      
+  
 
       </div>
   </section>
