--- a/wilson/run/wet/index.html
+++ b/wilson/run/wet/index.html
@@ -861,8 +861,13 @@ table {
   </style>
 
   <style type="text/css">
-  .codehilite .hll { background-color: #ffffcc }
-.codehilite  { background: #f8f8f8; }
+  pre { line-height: 125%; margin: 0; }
+td.linenos pre { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+span.linenos { color: #000000; background-color: #f0f0f0; padding: 0 5px 0 5px; }
+td.linenos pre.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+span.linenos.special { color: #000000; background-color: #ffffc0; padding: 0 5px 0 5px; }
+.codehilite .hll { background-color: #ffffcc }
+.codehilite { background: #f8f8f8; }
 .codehilite .c { color: #408080; font-style: italic } /* Comment */
 .codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
@@ -1059,7 +1064,6 @@ table {
         <li class="mono"><a href="adm.m.html">wilson.run.wet.adm</a></li>
         <li class="mono"><a href="classes.m.html">wilson.run.wet.classes</a></li>
         <li class="mono"><a href="definitions.m.html">wilson.run.wet.definitions</a></li>
-        <li class="mono"><a href="parameters.m.html">wilson.run.wet.parameters</a></li>
         <li class="mono"><a href="rge.m.html">wilson.run.wet.rge</a></li>
         <li class="mono"><a href="test_wetrunner.m.html">wilson.run.wet.test_wetrunner</a></li>
       </ul>
@@ -1086,7 +1090,6 @@ the weak effective theory.</p>
 
 
 <span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">rge</span>
-<span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">parameters</span>
 <span class="kn">from</span> <span class="nn">.classes</span> <span class="kn">import</span> <span class="n">WETrunner</span>
 </pre></div>
 
@@ -1103,7 +1106,6 @@ the weak effective theory.</p>
       <p class="name"><a href="adm.m.html">wilson.run.wet.adm</a></p>
       
   
-    <div class="desc"><p>Anomalous dimension matrices.</p></div>
 
       </div>
       <div class="item">
@@ -1120,13 +1122,6 @@ package.</p></div>
   
     <div class="desc"><p>Dictionaries assigning Wilson coefficients to classes and sectors,
 needed to construct appropriate vectors.</p></div>
-
-      </div>
-      <div class="item">
-      <p class="name"><a href="parameters.m.html">wilson.run.wet.parameters</a></p>
-      
-  
-    <div class="desc"><p>Default values for input parameters.</p></div>
 
       </div>
       <div class="item">
